--- a/src/components/Todo/TodoModal/GroupModal/GroupModal.css
+++ b/src/components/Todo/TodoModal/GroupModal/GroupModal.css
@@ -162,3 +162,19 @@
     color: var(--error-color);
     transform: scale(1.1);
   }
+.modal-appbar .MuiTabs-flexContainer {
+    width: auto;
+}
+
+
+  @media (max-width: 500px) {
+    .modal-appbar .MuiTabs-flexContainer {
+        flex-direction: row;
+    }
+
+    .modal-appbar .MuiTab-root {
+        min-width: auto;
+        width: 10px;
+        padding: 8px 0;
+    }
+}
